# xcp-lite

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Clippy.toml  LICENSE  README.md  build.rs  clang-format  hello_xcp.a2l  multi_thread_demo.a2l  multi_thread_demo_autodetect.a2l  point_cloud.a2l  rustfmt.toml  todo.md  xcp_lite.a2l
.cargo/: config.toml
.github/workflows/: default.yml
CANape/: .gitignore  CANape.ini  CanapeCmd.ini  XCPlite.cna  XCPlite.cnaxml  XCPlite.gvc  xcp_lite.a2l  xcp_lite_autodetect.a2l
benches/: README.md  xcp_benchmark.rs
doc/: INTRO.md  SUBMODULE_GUIDE.md  TODO.md
examples/: README.md
examples/all_features_demo/: Cargo.toml  README.md
examples/calibration_demo/: Cargo.toml  README.md
examples/calibration_demo/CANape/: .gitignore  CANape.ini  xcp_demo.cna  xcp_demo_autodetect.a2l
examples/calibration_demo/CANape/FunctionFallback/: CycleTime.fup
examples/calibration_demo/src/: main.rs
examples/common/: Cargo.toml
examples/hello_xcp/: Cargo.toml  README.md  hello_xcp.a2l  xcp_demo.A2L  xcp_demo_autodetect.a2l
examples/hello_xcp/CANape/: CANape.ini  CanapeCmd.ini  xcp_demo.cna  xcp_demo.cnaxml  xcp_demo_autodetect.a2l
examples/hello_xcp/src/: .gitignore  main.rs
examples/multi_thread_demo/: .gitignore  Cargo.toml  README.md  multi_thread_demo.a2l
examples/multi_thread_demo/CANape/: CANape.ini  CanapeCmd.ini  multi_thread_demo.cna  multi_thread_demo_autodetect.a2l
examples/multi_thread_demo/src/: main.rs
examples/point_cloud_demo/: .gitignore  Cargo.toml  README.md  point_cloud.a2l  xcp_lite_autodetect.a2l
examples/point_cloud_demo/CANape/: .gitignore  CANape.ini  CANapeTmpMea.ini  CanapeCmd.ini  point_cloud.cna  point_cloud.cnaxml  point_cloud.gvc  xcp_lite.HEX  xcp_lite_autodetect.a2l
examples/point_cloud_demo/src/: main.rs
examples/protobuf_demo/: Cargo.toml  descriptor_file.desc  xcp_demo.a2l
examples/protobuf_demo/src/: main.rs
examples/rayon_demo/: .gitignore  Cargo.toml  README.md  mandelbrot.a2l  rayon_demo.a2l
examples/rayon_demo/CANape/: .gitignore  CANape.ini  CanapeCmd.ini  UpdateHTMLWindows.cns  mandelbrot.par  rayon_demo.cna  rayon_demo.cnaxml  tokio_demo.HEX
examples/rayon_demo/src/: main.rs
examples/scoped_threads/: Cargo.toml  xcp_demo.A2L
examples/single_thread_demo/: .gitignore  Cargo.toml  README.md  single_thread_demo.a2h  single_thread_demo.a2l  single_thread_demo_autodetect.a2l
examples/single_thread_demo/CANape/: .gitignore  CANape.ini  single_thread.cna  single_thread.cnaxml
examples/single_thread_demo/src/: main.rs
examples/struct_measurement_demo/: Cargo.toml  README.md
examples/struct_measurement_demo/CANape/: CANape.ini  xcp_demo.cna  xcp_demo.gvc  xcp_demo_autodetect.a2l
examples/struct_measurement_demo/CANape/FunctionFallback/: .gitignore
examples/struct_measurement_demo/src/: main.rs
examples/struct_measurement_demo/struct_measurement_demo/: CANape.ini  CanapeCmd.ini  struct_measurement_demo.cna
examples/tokio_demo/: .gitignore  Cargo.toml  README.md  tokio_demo.a2l  tokio_demo_autodetect.a2l
examples/tokio_demo/CANape/: CANape.ini  tokio_demo.cna  tokio_demo.cnaxml
examples/tokio_demo/src/: main.rs  xcp_server.rs
examples/type_description_demo/: .gitignore  Cargo.toml  README.md
examples/type_description_demo/src/: main.rs
examples/xcp_daemon/: Cargo.toml  README.md  install.sh
examples/xcp_daemon/CANape/: CANape.ini  CanapeCmd.ini  xcp_demo.cna
examples/xcp_daemon/cfg/: xcp_demo_daemon.conf  xcp_demo_daemon.service  xcpd.conf
examples/xcp_daemon/src/: main.rs  platform.rs
examples/xcp_idl_generator_demo/: .gitignore  (+2 more)
mdflib/: wrapper.h
serialization/: Cargo.toml
src/: cal.rs  daq.rs  idl_generator.rs  lib.rs  main.rs  reg.rs  type_description.rs  xcp.rs  xcplite.rs
tests/: multi_task.rs  multi_thread.rs  single_thread.rs  test.rs  test_examples.sh  test_multi_thread.rs  test_single_thread.rs  test_tokio_multi_thread.rs  test_tokio_single_thread.rs  tokio_multi_thread.rs  tokio_single_thread.rs  xcp_server.rs  xcp_server_task.rs  xcp_test_executor.rs
tests/support/xcp_test_client/: Cargo.toml  README.md
tests/support/xcp_test_client/src/: lib.rs
tests/support/xcp_test_client/src/xcp_client/: mod.rs
xcp_client/: .gitignore  Cargo.toml  README.md  build.rs
xcp_client/src/: lib.rs  main.rs  mdflib.rs  xcp_client.rs  xcp_test_executor.rs
xcp_client/src/a2l/: a2l_reader.rs  mod.rs
xcp_idl_generator/: Cargo.toml
xcp_idl_generator_derive/: Cargo.toml
xcp_register_type/: README.md
xcp_register_type_derive/: Cargo.toml  DESIGN.md  README.md
xcp_register_type_derive/src/: attr.rs  enum_derive.rs  lib.rs  ty.rs
xcp_registry/: Cargo.toml  README.md
xcp_registry/src/: lib.rs  mc_address.rs  mc_calseg.rs  mc_event.rs  mc_instance.rs  mc_register_type.rs  mc_registry.rs  mc_support.rs  mc_text.rs  mc_type.rs  mc_typedef.rs
xcp_registry/src/a2l/: a2l_reader.rs  a2l_writer.rs  mod.rs
xcp_type_description/: Cargo.toml
xcplib/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh  c_demo.c  main_cfg.h  wrapper.h  xcpAppl.c  xcpAppl.h  xcp_cfg.h  xcplib.h  xcptl_cfg.h
xcplib/examples/c_demo/CANape/: CANape.ini  CanapeCmd.ini  xcp_demo.cna  xcp_demo_autodetect.a2l
xcplib/examples/c_demo/src/: main.c
xcplib/examples/hello_xcp/CANape/: CANape.ini  CanapeCmd.ini  xcp_demo.cna  xcp_demo_autodetect.a2l
xcplib/examples/hello_xcp/src/: main.c
xcplib/examples/multi_thread_demo/CANape/: CANape.ini  xcp_demo.cna  xcp_demo_autodetect.a2l
xcplib/examples/multi_thread_demo/src/: main.c
xcplib/examples/struct_demo/CANape/: CANape.ini  xcp_demo.cna  xcp_demo_autodetect.a2l
xcplib/examples/struct_demo/src/: main.c
xcplib/src/: a2l.c  a2l.h  dbg_print.h  main.h  main_cfg.h  platform.c  platform.h  xcp.h  xcpAppl.c  xcpAppl.h  xcpDaq.c  xcpDaq.h  xcpEthServer.c  xcpEthServer.h  xcpEthTl.c  xcpEthTl.h  xcpLite.c  xcpLite.h  xcpQueue.c  xcpQueue.h  xcpQueue32.c  xcpQueue64.c  xcpTl.c  xcpTl.h  xcpTlQueue.c  xcpTlQueue.h  xcpTl_cfg.h  xcp_cfg.h  xcptl_cfg.h
xcplib_cfg/: xcplib_rust_cfg.h
(+117 files in other folders)
