[package]
name = "xcp_lite"
version = "1.1.0"
edition = "2024"
resolver = "2"
rust-version = "1.90.0"
authors = ["RainerZ"]
description = "Measurement and Calibration for Rust with XCP, based on XCPlite"
readme = "README.md"
keywords = ["XCP","Rust","Vector","ASAM","CANape","A2L"]
license = "MIT OR Apache-2.0"
homepage = "https://vector.com"
repository = "https://github.com/vectorgrp/xcp-lite"
categories = ["MC"]

[workspace]
members = [
    "tools/xcp_client",  
    "xcp_type_description",   
    "xcp_idl_generator",      
    "examples/hello_xcp",
    "examples/calibration_demo",      
    "examples/struct_measurement_demo",    
    "examples/single_thread_demo",
    "examples/multi_thread_demo",
    "examples/point_cloud_demo",
    "examples/rayon_demo",
    "examples/tokio_demo",
]

[workspace.package]
version = "1.1.0"




#--------------------------------------------------------------------------------------
[features]


default = ["c_cal"] 

# Feature: Use XCPlite calibration segment management and lock/unlock
c_cal = []


# Feature a2l_reader using a2lfile
# Automatic check of the generated A2L file
a2l_reader = ["dep:a2lfile"]


#--------------------------------------------------------------------------------------

[dependencies]

# Error handling
thiserror = "1.0.69"
#thiserror = "2.0"

# Command line parser
clap = { version = "4.5.52", features = ["derive"] }

# A macro to generate structures which behave like bitflags
bitflags = "2.10.0"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

# Alloc stats
stats_alloc = "0.1.10"

# Collects build-information of your Rust crate, used to generate EPK
build-info = "0.0.40"

# A macro for declaring lazily evaluated statics
lazy_static = "1.5"

# Single assignment cells
once_cell = "1.21.3"
static_cell = "2.1.1"

# More compact and efficient implementations of the standard synchronization primitives
parking_lot = "0.12.5"

# Regular expression matching for registry object search
regex = "1.12.2"

# A generic serialization/deserialization framework
# Used to handle json parameter files (optional)
serde = "1.0"
serde_json =  "1.0"  

# proc-macro A2L serializer for structs
xcp_type_description  = { path = "./xcp_type_description/"}
xcp_type_description_derive = { path = "./xcp_type_description/xcp_type_description_derive/" }

# proc-macro CDR IDL generator for structs
xcp_idl_generator  = { path = "./xcp_idl_generator/"}
xcp_idl_generator_derive  = { path = "./xcp_idl_generator/xcp_idl_generator_derive/"}

# A2L checker (optional)
a2lfile = { version="3.3.0", optional = true}

anyhow = "1.0"

[dev-dependencies]
xcp_client = { path = "./tools/xcp_client" }
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
cc = "1.2"
build-info-build = "0.0.40"
bindgen = "0.71.1"

[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true

[profile.release]
panic = 'abort'
debug = true
lto = true
opt-level = 3
