[package]
name = "xcp_lite"
version = "3.0.0"
edition = "2024"
resolver = "2"
rust-version = "1.90.0"
authors = ["RainerZ"]
description = "Measurement and Calibration for Rust with XCP, based on XCPlite"
readme = "README.md"
keywords = ["XCP","Rust","Vector","ASAM","CANape","A2L"]
license = "MIT OR Apache-2.0"
homepage = "https://vector.com"
repository = "https://github.com/vectorgrp/xcp-lite"
categories = ["MC"]

[workspace]
members = [
    "xcp_registry",
    "xcp_register_type_derive",
    "tests/support/xcp_test_client",  
    "xcp_idl_generator",      
    "examples/common",
    "examples/all_features_demo",
    "examples/hello_xcp",
    "examples/calibration_demo",      
    "examples/struct_measurement_demo",    
    "examples/single_thread_demo",
    "examples/multi_thread_demo",
    "examples/point_cloud_demo",
    "examples/rayon_demo",
    "examples/tokio_demo",
]

[workspace.package]
version = "3.0.0"




#--------------------------------------------------------------------------------------
[features]

# Default features
default = ["linkme"]

# Deterministic, link-time collection of calibration segments via the `linkme` crate.
# Enabled by default: with this feature the `cal_seg!` macro assigns calibration segment indices
# (A2L MEMORY_SEGMENT numbers) in a stable, name-sorted order, independent of creation order or
# threads - this is race-free and prevents unnecessary A2L churn between runs.
# Disable it (default-features = false) if you create all calibration segments in a single,
# deterministic, race-free order and prefer not to depend on `linkme`; `cal_seg!` then falls back
# to eager creation in call order (like `CalSeg::new`). Crates using `cal_seg!` with this feature
# enabled must add `linkme` as a direct dependency.
linkme = ["dep:linkme"]

# Feature a2l_reader using a2lfile
# Automatic check of the generated A2L file
a2l_reader = ["xcp_registry/a2l_reader"]


#--------------------------------------------------------------------------------------

[dependencies]

# Error handling
thiserror = "1.0.69"
#thiserror = "2.0"

# A macro to generate structures which behave like bitflags
bitflags = "2.10.0"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

# Alloc stats
stats_alloc = "0.1.10"

# Collects build-information of your Rust crate, used to generate EPK
build-info = "0.0.40"

# A macro for declaring lazily evaluated statics
lazy_static = "1.5"

# Safe cross-platform linker shenanigans: distributed slice of calibration segment descriptors
# Used for deterministic, link-time collection of calibration segments (see cal_seg! macro).
# Optional: only pulled in by the `linkme` feature (enabled by default).
linkme = { version = "0.3", optional = true }

# Single assignment cells
once_cell = "1.21.3"
static_cell = "2.1.1"

# More compact and efficient implementations of the standard synchronization primitives
parking_lot = "0.12.5"

# Regular expression matching for registry object search
regex = "1.12.2"

# A generic serialization/deserialization framework
# Used to handle json parameter files (optional)
serde = "1.0"
serde_json =  "1.0"  

# proc-macro CDR IDL generator for structs
xcp_idl_generator  = { path = "./xcp_idl_generator/"}
xcp_idl_generator_derive  = { path = "./xcp_idl_generator/xcp_idl_generator_derive/"}

# Registry (pure Rust, no C/xcplib dependency) and the McRegisterType derive macro
xcp_registry = { path = "./xcp_registry" }
xcp_register_type_derive = { path = "./xcp_register_type_derive" }

anyhow = "1.0"

[dev-dependencies]
xcp_test_client = { path = "./tests/support/xcp_test_client" }
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
cc = "1.2"
build-info-build = "0.0.40"
bindgen = "0.71.1"

[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true

[profile.release]
panic = 'abort'
debug = true
lto = true
opt-level = 3
