[package]
name = "xcp_client"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["rainer.zaiser@vector.com>"]
description = "Rust implementation of ASAM XCP"
readme = "README.md"
keywords = ["XCP","ASAM","CANape","A2L"]
license = "MIT"
homepage = "https://vector.com"  
repository = "https://github.com/vectorgrp/xcp-lite"
categories = ["measurement and calibration"] 

 # more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["full"] }
a2lfile = "2.2.0"
bytes = "1.6.0"





