[package]
name = "xcp_client"
version = "0.3.0"
edition = "2024"
resolver = "2"
authors = ["RainerZ"]
description = "Rust implementation of ASAM XCP"
readme = "README.md"
keywords = ["XCP","ASAM","CANape","A2L"]
license = "MIT"
homepage = "https://vector.com"  
repository = "https://github.com/vectorgrp/xcp-lite"
categories = ["measurement and calibration"] 

 # more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
parking_lot = "0.12.3"
tokio = { version = "1.37.0", features = ["full"] }
bytes = "1.6.0"
byteorder = "1.5.0"
regex = "1.11.1"
lazy_static = "1.4"

a2lfile = { version="3.0.0" }
xcp_lite = { path = "../", features = ["a2l_reader"] }

[build-dependencies]
#cc = "1.0"
#build-info-build = "0.0.40"
#bindgen = "0.71.1"





