[package]
name = "xcp_register_type_derive"
version = "3.0.0"
edition = "2024"
authors = ["RainerZ"]
description = "Derive macro McRegisterType: generates direct xcp_registry registration code"
readme = "README.md"
keywords = ["XCP", "Rust", "Vector", "ASAM", "A2L"]
license = "MIT OR Apache-2.0"
homepage = "https://vector.com"
repository = "https://github.com/vectorgrp/xcp-lite"
categories = ["MC"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
