[package]
name = "xcp_registry"
version = "3.0.0"
edition = "2024"
resolver = "2"
authors = ["RainerZ"]
description = "Measurement and Calibration registry for XCP - pure Rust, no C dependency"
readme = "README.md"
keywords = ["XCP","Rust","Vector","ASAM","A2L"]
license = "MIT OR Apache-2.0"
homepage = "https://vector.com"
repository = "https://github.com/vectorgrp/xcp-lite"
categories = ["MC"]

#--------------------------------------------------------------------------------------
[features]

default = []

# Feature a2l_reader using a2lfile
# Enables loading A2L files into the registry and checking syntax
a2l_reader = ["dep:a2lfile"]

#--------------------------------------------------------------------------------------

[dependencies]

# Error handling
thiserror = "1.0.69"

# Logging
log = "0.4.28"

# More compact and efficient implementations of the standard synchronization primitives
parking_lot = "0.12.5"

# Regular expression matching for registry object search
regex = "1.12.2"

# A generic serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# proc-macro that generates direct registry registration code (#[derive(McRegisterType)])
xcp_register_type_derive = { path = "../xcp_register_type_derive/", version = "3.0.0" }

# A2L checker (optional)
a2lfile = { version = "3.3.0", optional = true }
