[package]
name = "calibration_demo"
version = "3.0.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
anyhow = "1.0"
lazy_static = "1.5"
serde = "1.0"
serde_json = "1.0"
example_common = { path = "../common" }
build-info = "0.0.40"

xcp_lite = { path = "../../", features = [] }
xcp_registry = { path = "../../xcp_registry" }

# Required by the cal_seg! macro: linkme's generated element code references the linkme crate,
# so any crate that creates calibration segments via cal_seg! must depend on linkme directly.
linkme = "0.3"

[build-dependencies]
build-info-build = "0.0.40"

