[package]
name = "xcp_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

xcp = { path = "../../" }
#xcp = { git = "https://github.com/vectorgrp/xcp-lite" }

# Dependencies for the A2L serializer proc-macro prototype
characteristic_container = { path = "../../serialization/characteristic_container/" } # CharacteristicContainer Trait
characteristic_container_derive = { path = "../../serialization/characteristic_container/characteristic_container_derive/" } 


