[package]
name = "hello_xcp"
version = "1.1.0"
edition = "2024"



[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
anyhow = "1.0"
lazy_static = "1.5"
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.5.52", features = ["derive"] }
build-info = "0.0.40"

xcp_lite = { path = "../../", features = [] }

[build-dependencies]
build-info-build = "0.0.40"

[features]
default = [] 
