[package]
name = "multi_thread_snyc_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"

lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0.14"

xcp = { path = "../../" }
#xcp = { git = "https://github.com/vectorgrp/xcp-lite" }

# Dependencies for the A2L serializer prototype
xcp_type_description = { path = "../../xcp_type_description/xcp_type_description/" } # XcpTypeDescription Trait
xcp_type_description_derive = { path = "../../xcp_type_description/xcp_type_description/xcp_type_description_derive/" } 



