[package]
name = "point_cloud_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
rayon = "1.10.0"
num = "0.4.3"
image = "0.13.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
cdr = "0.2.4"

xcp = { path = "../../" }
xcp_type_description  = { path = "../../xcp_type_description/"}
xcp_type_description_derive = { path = "../../xcp_type_description/xcp_type_description_derive/" }
xcp_idl_generator  = { path = "../../xcp_idl_generator/"}
xcp_idl_generator_derive  = { path = "../../xcp_idl_generator/xcp_idl_generator_derive/"}


[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.dev]
panic = 'abort'
debug = true
# lto = true
opt-level = 2


