[package]
name = "xcp_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

prost = "0.13.1"
prost-types = "0.13.1"


xcp = { path = "../../", features = [] }

