[package]
name = "rayon_demo"
version = "0.3.0"
edition = "2024"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
num = "0.4.3"
image = "0.25.2"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"

xcp_lite = { path = "../../", features = [] }

