[package]
name = "rayon_demo"
version = "1.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
anyhow = "1.0"
num_cpus = "1.17.0"
rayon = "1.11.0"
num = "0.4.3"
image = "0.25.9"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.5"
clap = { version = "4.5.52", features = ["derive"] }
build-info = "0.0.40"


xcp_lite = { path = "../../", features = [] }

[build-dependencies]
build-info-build = "0.0.40"

