[package]
name = "single_thread_demo"
version = "3.0.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
anyhow = "1.0"
lazy_static = "1.5"
serde = "1.0"
serde_json = "1.0"
example_common = { path = "../common" }
build-info = "0.0.40"

xcp_lite = { path = "../../", features = [] }
xcp_registry = { path = "../../xcp_registry" }

[build-dependencies]
build-info-build = "0.0.40"

