[package]
name = "tokio_demo"
version = "0.3.0"
edition = "2024"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
lazy_static = "1.4"
once_cell = "1.19.0"
rand = "0.9"


tokio = { version = "1.37.0", features = ["full"] }

serde = "1.0"
serde_json = "1.0"

xcp_lite = { path = "../../", features = [] }

