[package]
name = "tokio_demo"
version = "1.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
chrono = "0.4.42"
lazy_static = "1.5"
once_cell = "1.21.3"
rand = "0.9"


tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.52", features = ["derive"] }
build-info = "0.0.40"

serde = "1.0"
serde_json = "1.0"

xcp_lite = { path = "../../", features = [] }

[build-dependencies]
build-info-build = "0.0.40"

