[package]
name = "tokio_demo"
version = "3.0.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
chrono = "0.4.42"
lazy_static = "1.5"
once_cell = "1.21.3"
rand = "0.9"


tokio = { version = "1.48.0", features = ["full"] }
example_common = { path = "../common" }
build-info = "0.0.40"

serde = "1.0"
serde_json = "1.0"

xcp_lite = { path = "../../", features = [] }
xcp_registry = { path = "../../xcp_registry" }

[build-dependencies]
build-info-build = "0.0.40"

