[package]
name = "type_description_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
xcp = { path = "../../", features = ["auto_reg","json"] }
xcp_type_description = { path = "../../xcp_type_description" }
xcp_type_description_derive = { path = "../../xcp_type_description/xcp_type_description_derive/" }



