[package]
name = "xcp_daemon"
version = "0.1.0"
edition = "2021"

# In windows we simply log an error message and exit
# So we don't need to link any dependencies
[dependencies]
log = "0.4.22"

# In unix we link our dependencies as per usual
[target.'cfg(unix)'.dependencies]
xcp = { path = "../../", features = [] }

log = "0.4.22"
signal-hook = "0.3.17"
syslog = "7.0.0"
thiserror = "2.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
env_logger = "0.11.3"
