[package]
name = "xcp_test_client"
version = "3.0.0"
edition = "2024"
resolver = "2"
authors = ["RainerZ"]
description = "Slim XCP-on-ETH integration-test client for the xcp_lite workspace"
readme = "README.md"
keywords = ["XCP","ASAM","CANape","A2L"]
license = "MIT"
homepage = "https://vector.com"  
repository = "https://github.com/vectorgrp/xcp-lite"
categories = ["measurement and calibration"] 

 # more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
byteorder = "1.5.0"
bytes = "1.11.0"
parking_lot = "0.12.5"
tokio = { version = "1.48", features = ["full"] }

# A2l registry and A2L reader/writer
xcp_registry = { path = "../../../xcp_registry", features = ["a2l_reader"] }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[build-dependencies]





